--- a/install/BPM Enterprise 5.3 Azure YAML files/bpm-deployment.yaml
+++ b/install/BPM Enterprise 5.3 Azure YAML files/bpm-deployment.yaml
@@ -66,4 +66,4 @@ spec:
           - secretRef:
               name: bpm-secrets-ldap            
       imagePullSecrets:
-      - name: secret-bpm-acr
+      - name: secret-bpme-acr
